Adicionei a modificação para o programa mandar e-mail para as outras 3 instituições fiscalizadoras  na etapa de conclusão de processos

--- a/testeLukas.ipynb
+++ b/testeLukas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +30,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nº do Processo SEI</th>\n",
+       "      <th>Retido</th>\n",
+       "      <th>NumerodoRastreio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53500.339657/2022-11</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>53500.005314/2024-18</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53500.009687/2024-50</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>NM054271681BR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>53500.008803/2024-13</td>\n",
+       "      <td>NÃO</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53500.008794/2024-61</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>LB582291306HK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15939</th>\n",
+       "      <td>53500.080002/2024-85</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15940</th>\n",
+       "      <td>53500.080017/2024-43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15941</th>\n",
+       "      <td>53500.080104/2024-09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15942</th>\n",
+       "      <td>53500.080123/2024-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15943</th>\n",
+       "      <td>53500.080125/2024-16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15944 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Nº do Processo SEI Retido NumerodoRastreio\n",
+       "0      53500.339657/2022-11   NÃO               NaN\n",
+       "1      53500.005314/2024-18    NÃO              NaN\n",
+       "2      53500.009687/2024-50    SIM    NM054271681BR\n",
+       "3      53500.008803/2024-13   NÃO               NaN\n",
+       "4      53500.008794/2024-61    SIM    LB582291306HK\n",
+       "...                     ...    ...              ...\n",
+       "15939  53500.080002/2024-85    NaN              NaN\n",
+       "15940  53500.080017/2024-43    NaN              NaN\n",
+       "15941  53500.080104/2024-09    NaN              NaN\n",
+       "15942  53500.080123/2024-27    NaN              NaN\n",
+       "15943  53500.080125/2024-16    NaN              NaN\n",
+       "\n",
+       "[15944 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Carregar a planilha geral de processos\n",
-    "df = pd.read_excel(file_path, usecols=[0,2])"
+    "df = pd.read_excel(file_path, usecols=[0,2,3])\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(         Nº do Processo SEI Retido NumerodoRastreio\n",
+       " 14444  53500.073223/2024-05    Sim    NM475199113BR,\n",
+       " 'Sim',\n",
+       " 'NM475199113BR')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado = df[df['Nº do Processo SEI'] == \"53500.073223/2024-05\"]  \n",
+    "retido = resultado.iloc[0]['Retido']\n",
+    "codRastreio = resultado.iloc[0]['NumerodoRastreio']\n",
+    "resultado, retido, codRastreio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processo 53500.073244/2024-12: Retido = Não\n",
+      "Processo 53500.073223/2024-05: Retido = Sim\n",
+      "Processo 53500.073219/2024-39: Retido = Não\n",
+      "Processo 53500.073206/2024-60: Retido = Não\n",
+      "Processo 53500.073204/2024-71: Retido = Sim\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterar sobre cada processo\n",
     "for processo in lista_processos:\n",
@@ -63,6 +222,34 @@
     "    else:\n",
     "        print(f\"Processo {processo} não encontrado\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sim'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retido = retido.lower()\n",
+    "retido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
