--- a/testes/teste_andre.ipynb
+++ b/testes/teste_andre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +66,22 @@
     "navegador.maximize_window()\n",
     "#ENTRA NO SEI\n",
     "navegador.get('https://sei.anatel.gov.br/')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
+    "# navegador.switch_to.frame('ifrVisualizacao')\n",
+    "\n",
+    "navegador.find_element(By.XPATH, '//*[@id=\"selMarcador\"]/div/a').click()\n",
+    "\n",
+    "time.sleep(0.5)\n",
+    "                                #CLICA NA TAG DE INTERCORRENTE\n",
+    "navegador.find_element(By.PARTIAL_LINK_TEXT, 'Processo SEI ORCN - Pendência').click()"
    ]
   },
   {
@@ -254,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -268,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
