--- a/teste_andre.ipynb
+++ b/teste_andre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,33 +280,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Não foi possível encontrar a Declaração de Conformidade.\n",
-      "Célula encontrada: 53500.104031/2024-40\n"
-     ]
-    }
-   ],
-   "source": [
-    "fc.analisa(navegador, '53500.104031/2024-40', 'André Jacinto Rodrigues', fc.corrige_planilha(planilhaDrones, True), fc.corrige_planilha(planilhaRadios, False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "processo = '53500.070427/2024-86'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -396,65 +369,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "navegador.switch_to.default_content()\n",
-    "navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
-    "fc.clica_noelemento(navegador, By.XPATH, \"//img[contains(@src, 'svg/marcador_gerenciar.svg?18')]\")\n",
-    "#navegador.find_element(By.XPATH, '//*[@id=\"divArvoreAcoes\"]/a[24]').click()\n",
-    "navegador.switch_to.frame('ifrVisualizacao')\n"
+    "def reabre_processo():\n",
+    "    navegador.switch_to.default_content()\n",
+    "    navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
+    "    if fc.check_element_exists(By.XPATH, \"//img[contains(@src, 'svg/processo_reabrir.svg?18')]\", navegador):\n",
+    "        navegador.find_element(By.XPATH, \"//img[contains(@src, 'svg/processo_reabrir.svg?18')]\").click()\n",
+    "        print('Processo foi aberto novamente')\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def fecha_processo():\n",
+    "    navegador.switch_to.default_content()\n",
+    "    navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
+    "    try:\n",
+    "        navegador.find_element(By.XPATH, \"//img[contains(@src, 'svg/processo_concluir.svg?18')]\").click()\n",
+    "        navegador.switch_to.frame('ifrVisualizacao')\n",
+    "        fc.clica_noelemento(navegador, By.XPATH, '//*[@id=\"sbmSalvar\"]')\n",
+    "    except:\n",
+    "        pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processo foi aberto novamente\n"
+     ]
+    }
+   ],
    "source": [
-    "navegador.find_element(By.XPATH, '//*[@id=\"selMarcador\"]/div/a').click()\n",
-    "fc.clica_noelemento(navegador, By.PARTIAL_LINK_TEXT, 'Processo SEI ORCN - Concluido - Retidos')"
+    "processo_reaberto = reabre_processo()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "navegador.find_element(By.XPATH,'//*[@id=\"txtTextoPadrao\"]').send_keys('Despacho Decisório - Cancelamento de Homologação')\n",
-    "#time.sleep(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#CLICA NA PRIMEIRA OPCAO\n",
-    "fc.clica_noelemento(navegador, By.XPATH,'//*[@id=\"divInfraAjaxtxtTextoPadrao\"]/ul/li/a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#COLOCA O DESPACHO COMO PUBLICO\n",
-    "fc.clica_noelemento(navegador, By.XPATH,'//*[@id=\"divOptPublico\"]/div')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#SALVA DESPACHO\n",
-    "fc.clica_noelemento(navegador, By.ID,'btnSalvar')"
+    "if processo_reaberto:\n",
+    "    fecha_processo()"
    ]
   },
   {
