--- a/teste_andre.ipynb
+++ b/teste_andre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,11 +58,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "navegador.switch_to.window(janela_principal)"
+    "def get_text():\n",
+    "    #ENVIA TEXTO DO INPUT\n",
+    "    global texto_exigencia\n",
+    "    texto_exigencia = text_area.get(\"1.0\", tk.END).strip()\n",
+    "    #FECHA A JANELA DE INPUT\n",
+    "    root.destroy()\n",
+    "\n",
+    "#INICIALIZA A VARIAVEL LOCAL QUE RECEBERA O TEXTO DE INPUT\n",
+    "texto_exigencia = \"\"\n",
+    "\n",
+    "#CRIA A JANELA DA INTERFACE PARA CAIXA DE INPUT\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Inserir Texto de Exigência\")\n",
+    "\n",
+    "#INSTRUCAO DO QUE O USUARIO DEVE FAZER\n",
+    "label_instruction = tk.Label(root, text=\"Insira apenas a exigência:\")\n",
+    "label_instruction.pack(padx=10, pady=5)\n",
+    "\n",
+    "#CRIA AREA DE TEXTO COM ROLAGEM\n",
+    "text_area = scrolledtext.ScrolledText(root, wrap=tk.WORD, width=80, height=20)\n",
+    "text_area.pack(padx=10, pady=10)\n",
+    "\n",
+    "#CRIA BOTAO DE RECEBER O TEXTO\n",
+    "btn_get_text = tk.Button(root, text=\"Obter Texto\", command=get_text)\n",
+    "btn_get_text.pack(pady=5)\n",
+    "\n",
+    "root.bind('<Control-Return>', lambda event: get_text())\n",
+    "\n",
+    "#INICIA O LOOP PRINCIPAL QUE MANTEM A JANELA ATIVA\n",
+    "root.mainloop()"
    ]
   },
   {
@@ -231,106 +260,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "processo reaberto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "navegador.switch_to.default_content()\n",
-    "navegador.switch_to.frame('ifrArvore')\n",
+    "import pygetwindow as gw\n",
     "\n",
-    "if fc.check_element_exists(By.PARTIAL_LINK_TEXT, 'Despacho Decisório', navegador) and not fc.check_element_exists(By.XPATH, \"//img[contains(@src, 'svg/marcador_verde.svg?18')]\", navegador):\n",
-    "    print(\"O processo já foi despachado!\")\n",
-    "    \n",
-    "elif fc.check_element_exists(By.PARTIAL_LINK_TEXT, 'Despacho Decisório', navegador) and fc.check_element_exists(By.XPATH, \"//img[contains(@src, 'svg/marcador_verde.svg?18')]\", navegador):\n",
-    "    tipo_processo = 'Reaberto'\n",
-    "    print('processo reaberto')"
+    "def muda_janela(janela: str):\n",
+    "    # Lista todas as janelas abertas\n",
+    "    windows = gw.getAllTitles()\n",
+    "\n",
+    "    # Filtra janelas válidas (não-vazias)\n",
+    "    windows = [w for w in windows if w]\n",
+    "\n",
+    "    for i in range(len(windows)):\n",
+    "        if janela in windows[i]:\n",
+    "            window_to_activate = i\n",
+    "    window = gw.getWindowsWithTitle(windows[window_to_activate])[0]\n",
+    "    window.activate()\n",
+    "    window.maximize()\n",
+    "# Alternar para uma janela específica\n",
+    "# window_to_activate = int(input(\"Digite o número da janela para ativar: \"))\n",
+    "# window = gw.getWindowsWithTitle(windows[window_to_activate])[0]\n",
+    "# window.activate()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processo nº 53500.062842/2024-66\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fc.vai_para_processo(navegador, processosAssinados)\n",
-    "navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
-    "fc.clica_noelemento(navegador, By.XPATH, \"//img[contains(@src, 'svg/processo_concluir.svg?18')]\")\n",
-    "#clica_noelemento(navegador, By.XPATH,'//*[@id=\"divArvoreAcoes\"]/a[19]')\n",
-    "navegador.switch_to.frame('ifrVisualizacao')\n",
-    "fc.clica_noelemento(navegador, By.XPATH, '//*[@id=\"sbmSalvar\"]')\n",
-    "# navegador.find_element(By.XPATH, '//*[@id=\"divArvoreAcoes\"]/a[20]').click()\n",
-    "print(f\"Processo nº {processosAssinados}\")"
+    "muda_janela('Distribuição Processo Drone.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Despacho Decisório de Cancelamento encontrado.\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<Popen: returncode: None args: ['C:\\\\Program Files (x86)\\\\Microsoft\\\\Edge\\\\A...>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fc.retorna_pagina_inicial(navegador, processo)\n",
-    "navegador.switch_to.default_content()\n",
-    "navegador.switch_to.frame('ifrArvore')\n",
-    "lista_despachos = navegador.find_elements(By.PARTIAL_LINK_TEXT, 'Despacho Decisório')\n",
-    "for i in lista_despachos:\n",
-    "    navegador.switch_to.default_content()\n",
-    "    navegador.switch_to.frame('ifrArvore')\n",
-    "    i.click()\n",
-    "    navegador.switch_to.default_content()\n",
-    "    navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
-    "    navegador.switch_to.frame('ifrVisualizacao')\n",
-    "    time.sleep(1)\n",
-    "    if fc.check_element_exists(By.XPATH, \"//*[contains(text(), 'Revogar o')]\", navegador):\n",
-    "        navegador.switch_to.default_content()\n",
-    "        navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
-    "        print('Despacho Decisório de Cancelamento encontrado.\\n')\n",
+    "import subprocess\n",
     "\n",
-    "        time.sleep(1)\n",
-    "        #CLICA NO ICONE DE LEGO\n",
-    "        fc.clica_noelemento(navegador, By.XPATH, \"//img[contains(@src, 'svg/bloco_incluir_protocolo.svg?18')]\")\n",
-    "        \n",
-    "        #SELECIONA BLOCO (SELECIONA O PRIMEIRO DESPACHO PARA DRONES APROVADOS QUE LER)\n",
-    "        time.sleep(1.5)\n",
-    "        navegador.switch_to.frame('ifrVisualizacao')\n",
-    "        select_element = navegador.find_element(By.ID, 'selBloco')\n",
-    "        select = Select(select_element)\n",
-    "        #PROCURA O PRIMEIRO BLOCO QUE TENHA O TEXTO \"Despachos para Drones aprovados\"\n",
-    "        for opcao in select.options:\n",
-    "            if \"Despachos para Drones aprovados\" in opcao.text:\n",
-    "                select.select_by_visible_text(opcao.text)\n",
-    "                break\n",
-    "        time.sleep(0.5)\n",
-    "        #CLICA NO BOTAO DE INCLUIR NO BLOCO\n",
-    "        fc.clica_noelemento(navegador, By.XPATH,'//*[@id=\"sbmIncluir\"]')\n",
-    "        #navegador.find_element(By.XPATH, '//*[@id=\"sbmIncluir\"]').click()\n",
-    "\n",
-    "\n",
-    "\n",
+    "# Abre o Edge\n",
+    "subprocess.Popen([\"C:\\\\Program Files (x86)\\\\Microsoft\\\\Edge\\\\Application\\\\msedge.exe\"])\n",
     "\n"
    ]
   },
