trocado documentacao.pr para fiscalizacao1.pr

--- a/teste_andre.ipynb
+++ b/teste_andre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,24 +173,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Célula encontrada: nan\n",
-      "Parece que a janela 'Google Chrome' não está visível para o programa.\n",
-      "Opção inválida!\n",
-      "Parece que a janela 'Google Chrome' não está visível para o programa.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import funcoes as fc\n",
-    "processo = '53500.095982/2024-11'\n",
-    "fc.preenche_planilhageral(processo, 'André Jacinto Rodrigues')"
+    "lista_processos_atr = ['53500.002988/2025-33',\n",
+    "'53500.002997/2025-24',\n",
+    "'53500.002998/2025-79',\n",
+    "'53500.003000/2025-53',\n",
+    "'53500.003004/2025-31',\n",
+    "'53500.003003/2025-97',\n",
+    "'53500.003006/2025-21',\n",
+    "'53500.003007/2025-75',\n",
+    "'53500.003009/2025-64',\n",
+    "'53500.003011/2025-33',\n",
+    "'53500.003012/2025-88',\n",
+    "'53500.003013/2025-22',\n",
+    "'53500.003014/2025-77']\n",
+    "for processos_atr in lista_processos_atr:\n",
+    "    try:\n",
+    "        fc.clica_noelemento(navegador, By.XPATH, f'//label[@title=\"{processos_atr}\"]', 1)\n",
+    "        # processos_para_atr.append(processos_atr)\n",
+    "        # processos_restantes.remove(processos_atr)\n",
+    "        time.sleep(0.3)\n",
+    "    except:\n",
+    "        print(f'Processo {processos_atr} não encontrado.')\n",
+    "        # processos_restantes.remove(processos_atr)\n",
+    "        # processos_nao_encontrados.append(processos_atr)"
    ]
   },
   {
@@ -222,19 +231,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processo foi aberto novamente\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "processo_reaberto = reabre_processo()"
+    "def abrir_janela():\n",
+    "    janela = tk.Toplevel()\n",
+    "    janela.title(\"Nova Janela\")\n",
+    "    janela.geometry(\"300x200\")\n",
+    "\n",
+    "    # Garante que a nova janela fique em foco e no topo\n",
+    "    janela.attributes('-topmost', 1)  # Mantém a janela no topo\n",
+    "    janela.lift()                     # Eleva a janela\n",
+    "    janela.focus_force()              # Força o foco na janela\n",
+    "\n",
+    "    tk.Label(janela, text=\"Essa janela está em foco!\").pack(pady=20)\n",
+    "    tk.Button(janela, text=\"Fechar\", command=janela.destroy).pack()\n",
+    "\n",
+    "# Janela principal\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Janela Principal\")\n",
+    "root.geometry(\"300x200\")\n",
+    "\n",
+    "tk.Button(root, text=\"Abrir Nova Janela\", command=abrir_janela).pack(pady=50)\n",
+    "\n",
+    "root.mainloop()"
    ]
   },
   {
