corrigido problemas em muda_janela

--- a/teste_andre.ipynb
+++ b/teste_andre.ipynb
@@ -356,19 +356,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Célula encontrada: nan\n"
+      "Célula encontrada: 53500.000742/2025-27\n",
+      "Parece que a janela 'Google Chrome' não está visível para o programa.\n",
+      "Parece que a janela 'theomation' não está visível para o programa.\n"
      ]
     }
    ],
    "source": [
-    "fc.preenche_planilhageral('53500.047484/2024-61', 'André Jacinto Rodrigues', 'Não', 'Cancelado', '', 'Ademir Camargo')"
+    "import funcoes as fc\n",
+    "fc.preenche_planilhageral('53500.000742/2025-27', 'André Jacinto Rodrigues', 'Não', 'Aprovado', '', 'Rafael Basilio Chaves')"
    ]
   }
  ],
