--- a/teste_andre.ipynb
+++ b/teste_andre.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,33 +173,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista_processos_atr = ['53500.002988/2025-33',\n",
-    "'53500.002997/2025-24',\n",
-    "'53500.002998/2025-79',\n",
-    "'53500.003000/2025-53',\n",
-    "'53500.003004/2025-31',\n",
-    "'53500.003003/2025-97',\n",
-    "'53500.003006/2025-21',\n",
-    "'53500.003007/2025-75',\n",
-    "'53500.003009/2025-64',\n",
-    "'53500.003011/2025-33',\n",
-    "'53500.003012/2025-88',\n",
-    "'53500.003013/2025-22',\n",
-    "'53500.003014/2025-77']\n",
-    "for processos_atr in lista_processos_atr:\n",
-    "    try:\n",
-    "        fc.clica_noelemento(navegador, By.XPATH, f'//label[@title=\"{processos_atr}\"]', 1)\n",
-    "        # processos_para_atr.append(processos_atr)\n",
-    "        # processos_restantes.remove(processos_atr)\n",
-    "        time.sleep(0.3)\n",
-    "    except:\n",
-    "        print(f'Processo {processos_atr} não encontrado.')\n",
-    "        # processos_restantes.remove(processos_atr)\n",
-    "        # processos_nao_encontrados.append(processos_atr)"
+    "fc.vai_para_processo(navegador, \"53500.002572/2025-15\")\n",
+    "time.sleep(1)\n",
+    "navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
+    "#CLICA NO ICONE DE ENVIO DE EMAIL\n",
+    "fc.clica_noelemento(navegador, By.XPATH, \"//img[contains(@src, 'svg/email_enviar.svg?18')]\")\n",
+    "#clica_noelemento(navegador, By.XPATH, '//*[@id=\"divArvoreAcoes\"]/a[10]')\n",
+    "time.sleep(1)\n",
+    "#VAI PARA A JANELA MAIS RECENTE ABERTA\n",
+    "navegador.switch_to.window(navegador.window_handles[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "select_element = WebDriverWait(navegador, 10).until(EC.presence_of_element_located((By.XPATH, '//*[@id=\"selTextoPadrao\"]')))\n",
+    "select = Select(select_element)\n",
+    "#SELECIONA A OPCAO DE EMAIL ANATEL\n",
+    "select.select_by_visible_text('Processo SEI ORCN - APROVAÇÃO - DRONE')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "navegador.switch_to.window(navegador.window_handles[0])"
    ]
   },
   {
@@ -208,25 +216,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reabre_processo():\n",
+    "processosAssinados = '53500.000035/2025-31'\n",
+    "retido = 'nao'\n",
+    "# Interagir com o navegador para acessar a página do processo\n",
+    "navegador.switch_to.default_content()\n",
+    "navegador.find_element(By.ID, 'txtPesquisaRapida').clear()\n",
+    "navegador.find_element(By.ID, 'txtPesquisaRapida').send_keys(processosAssinados)\n",
+    "navegador.find_element(By.ID, 'txtPesquisaRapida').send_keys(Keys.ENTER)\n",
+    "time.sleep(1.5)\n",
+    "\n",
+    "#PEGA DADOS DA DECLARACAO DE CONFORMIDADE\n",
+    "navegador.switch_to.frame('ifrArvore')\n",
+    "\n",
+    "#CONFERE SE EXISTE A DECLARACAO DE CONFORMIDADE OU UMA PASTA\n",
+    "if fc.check_element_exists(By.PARTIAL_LINK_TEXT, \"Declaração de Conformidade\", navegador):\n",
+    "    navegador.find_element(By.PARTIAL_LINK_TEXT, \"Declaração de Conformidade\").click()\n",
+    "    time.sleep(0.3)\n",
+    "elif fc.check_element_exists(By.XPATH, '//*[@id=\"spanPASTA1\"]', navegador):\n",
+    "    navegador.find_element(By.XPATH, '//*[@id=\"spanPASTA1\"]').click()\n",
+    "    time.sleep(1)\n",
+    "    navegador.find_element(By.PARTIAL_LINK_TEXT, \"Declaração de Conformidade\").click()\n",
+    "    time.sleep(0.3)\n",
+    "\n",
+    "navegador.switch_to.default_content()\n",
+    "navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
+    "navegador.switch_to.frame('ifrVisualizacao')\n",
+    "\n",
+    "#ARMAZENA EMAIL DO SOLICITANTE\n",
+    "emailSol = navegador.find_element(By.XPATH, '/html/body/div[3]/a[1]').text\n",
+    "\n",
+    "navegador.switch_to.default_content()\n",
+    "navegador.switch_to.frame('ifrArvore')\n",
+    "\n",
+    "#VERIFICA SE EXISTE O DESPACHO DECISORIO\n",
+    "if fc.check_element_exists(By.PARTIAL_LINK_TEXT, \"Despacho Decisório\", navegador):\n",
+    "    #CLICA NO DESPACHO DECISORIO\n",
+    "    navegador.find_element(By.PARTIAL_LINK_TEXT, \"Despacho Decisório\").click()\n",
+    "    # navegador.find_element(By.PARTIAL_LINK_TEXT, \"Despacho Decisório\").click()\n",
     "    navegador.switch_to.default_content()\n",
     "    navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
-    "    if fc.check_element_exists(By.XPATH, \"//img[contains(@src, 'svg/processo_reabrir.svg?18')]\", navegador):\n",
-    "        navegador.find_element(By.XPATH, \"//img[contains(@src, 'svg/processo_reabrir.svg?18')]\").click()\n",
-    "        print('Processo foi aberto novamente')\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False\n",
-    "    \n",
-    "def fecha_processo():\n",
-    "    navegador.switch_to.default_content()\n",
-    "    navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
-    "    try:\n",
-    "        navegador.find_element(By.XPATH, \"//img[contains(@src, 'svg/processo_concluir.svg?18')]\").click()\n",
-    "        navegador.switch_to.frame('ifrVisualizacao')\n",
-    "        fc.clica_noelemento(navegador, By.XPATH, '//*[@id=\"sbmSalvar\"]')\n",
-    "    except:\n",
-    "        pass\n"
+    "    navegador.switch_to.frame('ifrVisualizacao')\n",
+    "    #VERIFICA SE EXISTE ASSINATURA DO GERENTE\n",
+    "    if fc.check_element_exists(By.XPATH, \"/html/body/div[1]/table[1]\", navegador):\n",
+    "        navegador.switch_to.default_content()\n",
+    "        navegador.switch_to.frame('ifrConteudoVisualizacao')\n",
+    "        #CLICA NO ICONE DE EMAIL\n",
+    "        fc.clica_noelemento(navegador, By.XPATH, \"//img[contains(@src, 'svg/email_enviar.svg?18')]\")\n",
+    "        #clica_noelemento(navegador, By.XPATH, '//*[@id=\"divArvoreAcoes\"]/a[8]')\n",
+    "        # navegador.find_element(By.XPATH, \"//img[@title='Enviar Documento por Correio Eletrônico']\").click()\n",
+    "        time.sleep(0.7)\n",
+    "        #MUDA PARA A JANELA MAIS RECENTE\n",
+    "        navegador.switch_to.window(navegador.window_handles[-1])\n",
+    "        #time.sleep(2)\n",
+    "        #SELECIONA O DROPDOWN COM AS OPCOES DE EMAIL\n",
+    "        select_element = WebDriverWait(navegador, 10).until(EC.presence_of_element_located((By.XPATH, '//*[@id=\"selDe\"]')))\n",
+    "        select = Select(select_element)\n",
+    "        #SELECIONA A OPCAO DE EMAIL ANATEL\n",
+    "        select.select_by_visible_text('ANATEL/E-mail de replicação <nao-responda@anatel.gov.br>')\n",
+    "        #INSERE EMAIL DO SOLICITANTE E CLICA NO EMAIL DO SOLICITANTE\n",
+    "        navegador.find_element(By.XPATH, '//*[@id=\"s2id_autogen1\"]').send_keys(emailSol)\n",
+    "        time.sleep(1)\n",
+    "        #CLICA NO EMAIL DO SOLICITANTE\n",
+    "        fc.clica_noelemento(navegador, By.XPATH,'//*[@id=\"select2-result-label-2\"]')\n",
+    "        # navegador.find_element(By.XPATH, '//*[@id=\"select2-result-label-2\"]').click()\n",
+    "        #INSERE ASSUNTO DO EMAIL E TEXTO DO EMAIL\n",
+    "        if retido == \"sim\":\n",
+    "            fc.endereco_email(\"notificacaosei.sp@anatel.gov.br\", navegador)\n",
+    "            fc.endereco_email(\"documentacao.rj@anatel.gov.br\", navegador)\n",
+    "            fc.endereco_email(\"fiscalizacao1.pr@anatel.gov.br\", navegador)\n",
+    "            navegador.find_element(By.ID, 'txtAssunto').send_keys(f'Processo SEI nº {processosAssinados} - Aprovado (teste)')\n",
+    "            select_element = WebDriverWait(navegador, 10).until(EC.presence_of_element_located((By.XPATH, '//*[@id=\"selTextoPadrao\"]')))\n",
+    "            select = Select(select_element)\n",
+    "            #SELECIONA O TEXTO PADRAO DE DRONES RETIDOS APROVADOS\n",
+    "            select.select_by_visible_text('Processo SEI ORCN - APROVAÇÃO - DRONE RETIDO')\n",
+    "        else:\n",
+    "            navegador.find_element(By.ID, 'txtAssunto').send_keys(f'Processo SEI nº {processosAssinados} - Aprovado')\n",
+    "            select_element = WebDriverWait(navegador, 10).until(EC.presence_of_element_located((By.XPATH, '//*[@id=\"selTextoPadrao\"]')))\n",
+    "            select = Select(select_element)\n",
+    "            #SELECIONA O TEXTO PADRAO DE DRONES APROVADOS\n",
+    "            select.select_by_visible_text('Processo SEI ORCN - APROVAÇÃO - DRONE')"
    ]
   },
   {
